--- a/src/product/PC_SHP_1004.html
+++ b/src/product/PC_SHP_1004.html
@@ -5,9 +5,9 @@
 		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품후기",
 		"webroot": "."
 	})
-	<script src="/assets/js/modernizr.js"></script>
-	<script src="/assets/js/product.js"></script>
-	<link rel="stylesheet" href="/assets/css/product.css">
+	<script src="assets/js/modernizr.js"></script>
+	<script src="assets/js/product.js"></script>
+	<link rel="stylesheet" href="assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
@@ -154,7 +154,7 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="/assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
@@ -172,7 +172,7 @@
                       손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
                     <p class="rv__thumnb">
                       <span>8<em>+</em></span>
-                      <img src="/assets/images/dummy.png"></p>
+                      <img src="assets/images/dummy.png"></p>
                     </p>
                   </div>
                 </a>
@@ -197,7 +197,7 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="/assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
@@ -213,7 +213,7 @@
                     <p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요</p>
                     <p class="rv__thumnb">
                       <span>8<em>+</em></span>
-                      <img src="/assets/images/dummy.png"></p>
+                      <img src="assets/images/dummy.png"></p>
                     </p>
                   </div>
                 </a>
@@ -236,7 +236,7 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="/assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
@@ -254,7 +254,7 @@
                       손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
                     <p class="rv__thumnb">
                       <span>8<em>+</em></span>
-                      <img src="/assets/images/dummy.png"></p>
+                      <img src="assets/images/dummy.png"></p>
                     </p>
                   </div>
                 </a>
@@ -277,7 +277,7 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="/assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
@@ -312,11 +312,11 @@
 
           <div class="list__bottom"> 
             <div class="review_paging">
-              <p><a href="#" class="btn__prev"><img src="/assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
+              <p><a href="#" class="btn__prev"><img src="assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
               <div class="paging_number">
                 <p><span>1</span>/<span>9</span></p>
               </div>
-              <p><a href="#" class="btn__next"><img src="/assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
+              <p><a href="#" class="btn__next"><img src="assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
             </div>
           </div>
         </div>
