--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -5,10 +5,10 @@
 		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품목록",
 		"webroot": "."
 	})
-	<script src="/assets/js/modernizr.js"></script>
+	<script src="assets/js/modernizr.js"></script>
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/jquery.textfill.js"></script>
-	<script src="/assets/js/product.js"></script>
-	<link rel="stylesheet" href="/assets/css/product.css">
+	<script src="assets/js/product.js"></script>
+	<link rel="stylesheet" href="assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
@@ -51,10 +51,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -85,9 +85,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -150,10 +150,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -184,9 +184,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -224,10 +224,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -258,9 +258,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -298,10 +298,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -332,9 +332,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -372,10 +372,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -406,9 +406,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
