--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 				<tr>
 					<td>ARCHIVE</td>
 					<td>PC_COL_1000</td>
-					<td><a href="#" target="_blank">./#</a></td>
+					<td><a href="" target="_blank">./#</a></td>
 					<td></td>
 				</tr>
 				<tr>
@@ -51,7 +51,7 @@
 				<tr>
 					<td>Product > 상세</td>
 					<td>PC_SHP_1001</td>
-					<td><a href=".\/product/PC_SHP_1001.html" target="_blank">./product/PC_SHP_1001.html</a></td>
+					<td><a href="./product/PC_SHP_1001.html" target="_blank">./product/PC_SHP_1001.html</a></td>
 					<td>작업중</td>
 				</tr>
 				<tr>
