--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -3,17 +3,17 @@
 <head>
 	@@include('../inc/pagehead.inc', {
 		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 검색",
-		"webroot": "."
+		"webroot": "../"
 	})
-	<script src="assets/js/modernizr.js"></script>
-	<script src="assets/js/product.js"></script>
-	<link rel="stylesheet" href="assets/css/search.css">
+	<script src="../assets/js/modernizr.js"></script>
+	<script src="../assets/js/product.js"></script>
+	<link rel="stylesheet" href="../assets/css/search.css">
 </head>
 <body>
 	<div id="wrap">
 		@@include('../inc/header.inc', {
 			"login": "false",
-			"webroot": ".."
+			"webroot": "../"
 		})
 
 		<div class="container">
@@ -274,7 +274,7 @@
 		</div>
 
 		@@include('../inc/footer.inc', {
-			"webroot": ".."
+			"webroot": "../"
 		})
 	</div>
 </body>
