--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -3,17 +3,17 @@
 <head>
 	@@include('../inc/pagehead.inc', {
 		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품상세",
-		"webroot": "."
+		"webroot": "../"
 	})
-	<script src="assets/js/modernizr.js"></script>
-	<script src="assets/js/product.js"></script>
-	<link rel="stylesheet" href="assets/css/product.css">
+	<script src="../assets/js/modernizr.js"></script>
+	<script src="../assets/js/product.js"></script>
+	<link rel="stylesheet" href="../assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
 		@@include('../inc/header.inc', {
 			"login": "false",
-			"webroot": "."
+			"webroot": "../"
 		})
 
     <div class="container sub__container">
@@ -30,10 +30,10 @@
 					<div class="swiper-container productDetailswp">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="assets/images/temp/@product01.png" alt="">
+								<img src="../assets/images/temp/@product01.png" alt="">
 							</div>
 							<div class="swiper-slide">
-								<img src="assets/images/temp/@product02.png" alt="">
+								<img src="../assets/images/temp/@product02.png" alt="">
 							</div>
 						</div>
 						<div class="swiper-pagination"></div>
@@ -84,9 +84,9 @@
 							</ul> -->
 
 							<div class="product__quantity">
-								<a href="#" class="qty_button"><img src="assets/images/btn_count_down.png" alt="수량감소"></a>
+								<a href="#" class="qty_button"><img src="../assets/images/btn_count_down.png" alt="수량감소"></a>
 								<input type="text" value="1" class="qty_input" maxlength="3" />
-								<a href="#" class="qty_button"><img src="assets/images/btn_count_up.png" alt="수량증가"></a>
+								<a href="#" class="qty_button"><img src="../assets/images/btn_count_up.png" alt="수량증가"></a>
 							</div>
 
 							<!-- option list -->
@@ -99,9 +99,9 @@
 									<div class="product__etc">
 										<div class="qty__wrap">
 											<div class="product__quantity">
-												<a href="#" class="qty_button"><img src="assets/images/btn_count_down.png" alt="수량감소"></a>
+												<a href="#" class="qty_button"><img src="../assets/images/btn_count_down.png" alt="수량감소"></a>
 												<input type="text" value="1" class="qty_input" maxlength="3" />
-												<a href="#" class="qty_button"><img src="assets/images/btn_count_up.png" alt="수량증가"></a>
+												<a href="#" class="qty_button"><img src="../assets/images/btn_count_up.png" alt="수량증가"></a>
 											</div>
 											<a href="#" class="btn__delete"><span class="a11y">삭제</span></a>
 										</div>
@@ -118,9 +118,9 @@
 									<div class="product__etc">
 										<div class="qty__wrap">
 											<div class="product__quantity">
-												<a href="#" class="qty_button"><img src="assets/images/btn_count_down.png" alt="수량감소"></a>
+												<a href="#" class="qty_button"><img src="../assets/images/btn_count_down.png" alt="수량감소"></a>
 												<input type="text" value="1" class="qty_input" maxlength="3" />
-												<a href="#" class="qty_button"><img src="assets/images/btn_count_up.png" alt="수량증가"></a>
+												<a href="#" class="qty_button"><img src="../assets/images/btn_count_up.png" alt="수량증가"></a>
 											</div>
 											<a href="#" class="btn__delete"><span class="a11y">삭제</span></a>
 										</div>
@@ -149,13 +149,13 @@
 							<div class="productReview swiper-container">
 								<ul class="product__reivew--list swiper-wrapper">
 									<li class="rv__item swiper-slide">
-										<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+										<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 										<p class="rv__box">
 											<span class="rv__writer">test***</span> 1아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 										</p>
 									</li>
 									<li class="rv__item swiper-slide">
-										<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+										<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 										<p class="rv__box">
 											<span class="rv__writer">test***</span> 2아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 										</p>
@@ -224,7 +224,7 @@
 								<a href="#" class="act__btn btn_soldout">SOLD OUT</a>
 							</div>
 							<div id="NaverChk_Button" class="product__naverchk">
-								<img src="assets/images/temp/@naverpay.jpg">
+								<img src="../assets/images/temp/@naverpay.jpg">
 							</div>
 						</div>
 
@@ -234,7 +234,7 @@
 
 				<div class="product__additional">
 					<div id="prdDetail" class="product__section detail__cont">
-						<img src="assets/images/temp/@productdetail.jpg">
+						<img src="../assets/images/temp/@productdetail.jpg">
 					</div>
 
 					<div id="prdGuide" class="product__section">
@@ -291,7 +291,7 @@
 
 					<div id="prdTalkwalk" class="product__section product__talkwalk">
 						<div>
-							<img src="assets/images/temp/@talkwalk.jpg">
+							<img src="../assets/images/temp/@talkwalk.jpg">
 						</div>
 					</div>
 
@@ -318,7 +318,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -336,7 +336,7 @@
 												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="assets/images/dummy.png"></p>
+												<img src="../assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -360,7 +360,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -376,7 +376,7 @@
 											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="assets/images/dummy.png"></p>
+												<img src="../assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -400,7 +400,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -418,7 +418,7 @@
 												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
 											<p class="rv__thumnb">
 												<span>8<em>+</em></span>
-												<img src="assets/images/dummy.png"></p>
+												<img src="../assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
@@ -442,7 +442,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -480,7 +480,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -517,11 +517,11 @@
 
 							<div class="list__bottom"> 
 								<div class="review_paging">
-									<p><a href="#" class="btn__prev"><img src="assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
+									<p><a href="#" class="btn__prev"><img src="../assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
 									<div class="paging_number">
 										<p><span>1</span>/<span>9</span></p>
 									</div>
-									<p><a href="#" class="btn__next"><img src="assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
+									<p><a href="#" class="btn__next"><img src="../assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
 								</div>
 
 								<div class="list__bottom--btn">
@@ -561,7 +561,7 @@
 											<div class="menu__swiper">
 												<ul>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
+														<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 													</li>
 												</ul>
 											</div>
@@ -619,7 +619,7 @@
 											<div class="menu__swiper">
 												<ul>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
+														<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 													</li>
 												</ul>
 											</div>
@@ -652,7 +652,7 @@
 											<div class="menu__swiper">
 												<ul>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
+														<div class="menu__img"><img src="../assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
 											</div>
@@ -685,7 +685,7 @@
 											<div class="menu__swiper">
 												<ul>
 													<li class="swiper-slide">
-														<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
+														<div class="menu__img"><img src="../assets/images/dummy.png" alt="상품"></div>
 													</li>
 												</ul>
 											</div>
@@ -728,7 +728,7 @@
 				<div class="layer__close"><a href="#none" data-layer="Product_ReviewWrite" class="btn__close modal__hide"><span class="a11y">닫기</span></a></div>
 				<div class="layer__content">
 					<div class="rv__product">
-						<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+						<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 						<div class="rv__box">
 							<p class="rv__prname">Rinen Striped Jacket</p>
 							<div class="rv__prcnt">
@@ -757,23 +757,23 @@
 						<!-- 사진 추가 후 //-->
 						<ul class="rv_photo_list" style="display: none;">
 							<li>
-								<img class="figure" title="" src="assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<!-- <li>
-								<img class="figure" title="" src="assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/temp/@product01.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li> -->
 							<li>
@@ -849,7 +849,7 @@
 				<div class="layer__content">
 					<div class="cont_detail">
 						<div class="rv__product">
-							<p class="rv__figure"><img src="assets/images/temp/@product01.png"></p>
+							<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 							<div class="rv__box">
 								<div class="rv__head">
 									<p class="review__writter"><span>ININ******</span> 님의 리뷰</p>
@@ -919,7 +919,7 @@
 		</div>
 		
 		@@include('../inc/footer.inc', {
-			"webroot": "."
+			"webroot": "../"
 		})
 	</div>
 </body>
