--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -4,7 +4,7 @@
 <head>
 	@@include('./inc/pagehead.inc', {
 	"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK",
-	"webroot": "."
+	"webroot": "./"
 	})
 	<script src="./assets/js/main.js"></script>
 	<link rel="stylesheet" href="./assets/css/main.css">
@@ -14,7 +14,7 @@
 	<div id="wrap">
 		@@include('./inc/header.inc', {
 		"login": "true",
-		"webroot": "."
+		"webroot": "./"
 		})
 
 		<div class="container">
@@ -643,7 +643,7 @@
 		</div>
 
 		@@include('./inc/footer.inc', {
-		"webroot": "."
+		"webroot": "./"
 		})
 	</div>
 </body>
