--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -35,6 +35,9 @@
 							<div class="swiper-slide">
 								<img src="../assets/images/temp/@product02.png" alt="">
 							</div>
+							<div class="swiper-slide">
+								<img src="../assets/images/temp/@product03.png" alt="">
+							</div>
 						</div>
 						<div class="swiper-pagination"></div>
 					</div>
