--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -36,10 +36,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -70,9 +70,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="../assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="../assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -135,10 +135,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -169,9 +169,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="../assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="../assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -209,10 +209,10 @@
 												<div class="menu__swiper swiper">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="../assets/images/dummy.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="../assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -243,9 +243,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="../assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="../assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
