--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -25,8 +25,8 @@
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<video loop muted poster="./assets/images/dummy.png">
-											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
+											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" autostart="false">
 										</video>
 									</div>
 									<div class="visual__contents">
@@ -42,8 +42,8 @@
 								</div>
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<video loop muted poster="./assets/images/dummy.png">
-											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
+										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
+											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" autostart="false">
 										</video>
 									</div>
 									<div class="visual__contents">
@@ -59,8 +59,8 @@
 								</div>
 								<div class="swiper-slide">
 									<div class="visual__video">
-										<video loop muted poster="./assets/images/dummy.png">
-											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+										<video muted="muted" onloadedmetadata="this.muted = true" poster="./assets/images/dummy.png" playsinline>
+											<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4" autostart="false">
 										</video>
 									</div>
 									<div class="visual__contents">
@@ -80,17 +80,17 @@
 						<div class="visual__control">
 							<div class="visual__preview">
 								<div class="visual__video">
-									<video autoplay loop muted>
+									<video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 									</video>
 								</div>
 								<div class="visual__video">
-									<video autoplay loop muted>
+									<video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
 									</video>
 								</div>
 								<div class="visual__video">
-									<video autoplay loop muted>
+									<video autoplay loop muted playsinline>
 										<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
 									</video>
 								</div>
