상품상세 수정 반영

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -30,13 +30,13 @@
 					<div class="swiper-container productDetailswp">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="../assets/images/temp/@product01.png" alt="">
+								<img src="../assets/images/m_bg_menu_category_outer.png" alt="">
 							</div>
 							<div class="swiper-slide">
 								<img src="../assets/images/temp/@product02.png" alt="">
 							</div>
 							<div class="swiper-slide">
-								<img src="../assets/images/temp/@product03.png" alt="">
+								<img src="../assets/images/m_bg_menu_category_outer.png" alt="">
 							</div>
 						</div>
 						<div class="swiper-pagination"></div>
@@ -152,13 +152,13 @@
 							<div class="productReview swiper-container">
 								<ul class="product__reivew--list swiper-wrapper">
 									<li class="rv__item swiper-slide">
-										<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+										<p class="rv__figure"><img src="../assets/images/bg_menu_category_top.png"></p>
 										<p class="rv__box">
 											<span class="rv__writer">test***</span> 1아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 										</p>
 									</li>
 									<li class="rv__item swiper-slide">
-										<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+										<p class="rv__figure"><img src="../assets/images/@product_s.png"></p>
 										<p class="rv__box">
 											<span class="rv__writer">test***</span> 2아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 										</p>
@@ -321,7 +321,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/m_bg_menu_category_outer.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -363,7 +363,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/m_bg_menu_category_outer.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -403,7 +403,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/m_bg_menu_category_outer.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -445,7 +445,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/m_bg_menu_category_outer.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -483,7 +483,7 @@
 								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<p class="rv__figure"><img src="../assets/images/m_bg_menu_category_outer.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -561,13 +561,7 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper">
-												<ul>
-													<li class="swiper-slide">
-														<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
-													</li>
-												</ul>
-											</div>
+											<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 										</a>
 									</div>
 								</div>
@@ -619,13 +613,7 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper">
-												<ul>
-													<li class="swiper-slide">
-														<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
-													</li>
-												</ul>
-											</div>
+											<div class="menu__img"><img src="../assets/images/@img_product03.png" alt="상품"></div>
 										</a>
 									</div>
 								</div>
@@ -652,13 +640,7 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper">
-												<ul>
-													<li class="swiper-slide">
-														<div class="menu__img"><img src="../assets/images/dummy.png" alt="상품"></div>
-													</li>
-												</ul>
-											</div>
+											<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 										</a>
 									</div>
 								</div>
@@ -685,13 +667,7 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__swiper">
-												<ul>
-													<li class="swiper-slide">
-														<div class="menu__img"><img src="../assets/images/dummy.png" alt="상품"></div>
-													</li>
-												</ul>
-											</div>
+											<div class="menu__img"><img src="../assets/images/@img_product_celeb.png" alt="상품"></div>
 										</a>
 									</div>
 								</div>
