--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -598,7 +598,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="menu">
+			<div class="menu menu--nav">
 				<nav class="menu__container">
 					<ul class="menu__list">
 						<li class="menu__item">
