상품리뷰 수정 반영중

--- a/src/product/PC_SHP_1004.html
+++ b/src/product/PC_SHP_1004.html
@@ -154,14 +154,14 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="../assets/images/bg_menu_category_outer.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
                     </div>
                     <p class="rv__count">
                       <span class="ic_star"></span>
-                      4.8 <span>(36)</span>
+                      4.8
                     </p>
                   </div>
                 </a>
@@ -197,14 +197,14 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="../assets/images/bg_menu_category_outer.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
                     </div>
                     <p class="rv__count">
                       <span class="ic_star"></span>
-                      4.8 <span>(36)</span>
+                      4.8
                     </p>
                   </div>
                 </a>
@@ -236,14 +236,14 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="../assets/images/bg_menu_category_outer.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
                     </div>
                     <p class="rv__count">
                       <span class="ic_star"></span>
-                      4.8 <span>(36)</span>
+                      4.8
                     </p>
                   </div>
                 </a>
@@ -277,14 +277,14 @@
               <div class="item__inner">
                 <a href="#">
                   <div class="rv__product">
-                    <p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+                    <p class="rv__figure"><img src="../assets/images/bg_menu_category_outer.png"></p>
                     <div class="rv__box">
                       <p class="rv__prname">Rinen Striped Jacket</p>
                       <span class="rv__prcode">448374@N</span>
                     </div>
                     <p class="rv__count">
                       <span class="ic_star"></span>
-                      4.8 <span>(36)</span>
+                      4.8
                     </p>
                   </div>
                 </a>
