상세, 후기 수정사항 반영

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -568,9 +568,8 @@
 								<div class="menu__info">
 									<p class="menu__name">22SS Ms 스카시 스트라이프 티셔츠 - 네이비</p>
 									<div class="menu__right">
-										<!-- <span class="menu__event">COUPON</span>	 -->
 										<p class="menu__discount">₩146,000</p>
-										<p class="menu__price">₩150,000(30%)</p>
+										<p class="menu__price">₩150,000</p>
 									</div>
 								</div>
 							</li>
@@ -613,14 +612,13 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__img"><img src="../assets/images/@img_product03.png" alt="상품"></div>
+											<div class="menu__img"><img src="../assets/images/temp/@product01.png" alt="상품"></div>
 										</a>
 									</div>
 								</div>
 								<div class="menu__info">
 									<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 									<div class="menu__right">
-										<span class="menu__event">COUPON</span>
 										<p class="menu__price">₩50,000</p>
 									</div>
 								</div>
@@ -647,7 +645,6 @@
 								<div class="menu__info">
 									<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 									<div class="menu__right">
-										<span class="menu__event">COUPON</span>
 										<p class="menu__price">₩50,000</p>
 									</div>
 								</div>
@@ -674,7 +671,6 @@
 								<div class="menu__info">
 									<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 									<div class="menu__right">
-										<span class="menu__event">COUPON</span>
 										<p class="menu__price">₩50,000</p>
 									</div>
 								</div>
