--- a/src/product/PC_SHP_1004.html
+++ b/src/product/PC_SHP_1004.html
@@ -52,96 +52,96 @@
           </div>
 
           <!-- search layer -->
-          <div class="search">
-            <div id="SearchLayer" class="search__layer">
-              <div class="search__form">
-                <a href="#" data-layer="SearchLayer" class="btn__close modal__hide"><span class="a11y">닫기</span></a>
-								<form action="">
-									<fieldset>
-										<legend>상세검색</legend>
-                    <div class="filter">
-                      <div class="filter__row">
-                        <div class="filter__left">
-                          <p class="filter__label">신장</p>
-                        </div>
-                        <div class="filter__right">
-                          <p>
-                            <label><input type="checkbox"> 전체</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">150미만</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">150~155</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">156~160</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">160~165</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">166~170</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">170~175</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">176이상</label>
-                          </p>
-                        </div>
+          <!-- <div class="search">
+          </div> -->
+          <div id="SearchLayer" class="search__layer">
+            <div class="search__form">
+              <a href="#" data-layer="SearchLayer" class="btn__close modal__hide"><span class="a11y">닫기</span></a>
+              <form action="">
+                <fieldset>
+                  <legend>상세검색</legend>
+                  <div class="filter">
+                    <div class="filter__row">
+                      <div class="filter__left">
+                        <p class="filter__label">신장</p>
                       </div>
-                      <div class="filter__row">
-                        <div class="filter__left">
-                          <p class="filter__label">몸무게</p>
-                        </div>
-                        <div class="filter__right">
-                          <p>
-                            <label><input type="checkbox">전체</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">40미만</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">41~45</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">46~50</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">51~55</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">56~60</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">60~65</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">66~70</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">71이상</label>
-                          </p>
-                        </div>
-                      </div>
-                      <div class="filter__row">
-                        <div class="filter__left">
-                          <p class="filter__label">착용사이즈</p>
-                        </div>
-                        <div class="filter__right">
-                          <p>
-                            <label><input type="checkbox">전체</label>
-                          </p>
-                          <p>
-                            <label><input type="checkbox">40미만</label>
-                          </p>
-                        </div>
+                      <div class="filter__right">
+                        <p>
+                          <label><input type="checkbox"> 전체</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">150미만</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">150~155</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">156~160</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">160~165</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">166~170</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">170~175</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">176이상</label>
+                        </p>
                       </div>
                     </div>
-                  </fieldset>
-                </form>
-              </div>
+                    <div class="filter__row">
+                      <div class="filter__left">
+                        <p class="filter__label">몸무게</p>
+                      </div>
+                      <div class="filter__right">
+                        <p>
+                          <label><input type="checkbox">전체</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">40미만</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">41~45</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">46~50</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">51~55</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">56~60</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">60~65</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">66~70</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">71이상</label>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="filter__row">
+                      <div class="filter__left">
+                        <p class="filter__label">착용사이즈</p>
+                      </div>
+                      <div class="filter__right">
+                        <p>
+                          <label><input type="checkbox">전체</label>
+                        </p>
+                        <p>
+                          <label><input type="checkbox">40미만</label>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
             </div>
           </div>
           <!--// search layer -->
