메인, 상품 수정

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -22,18 +22,18 @@
 				<div class="product-list__container">
 					<div class="product-list__sort">
 						<div class="product-list__trigger">
-							<p class="product-list__text">SHIRTS &amp; BLOUSES</p>
+							<p class="product-list__text product-list__text--auto">SHIRTS &amp; BLOUSES</p>
 							<i class="product-list__ico"></i>
 						</div>
 						<ul class="product-list__option">
-							<li class="product-list__item">KNIT</li>
-							<li class="product-list__item">SLEEVELESS</li>
-							<li class="product-list__item">LONG SLEEVE</li>
-							<li class="product-list__item">HOODIE</li>
-							<li class="product-list__item">SHIRTS &amp; BLOUSES</li>
-							<li class="product-list__item">SWEATSHIRT</li>
-							<li class="product-list__item">T-SHIRT</li>
-							<li class="product-list__item">ALL</li>
+							<li class="product-list__item"><span>KNIT</span></li>
+							<li class="product-list__item"><span>SLEEVELESS</span></li>
+							<li class="product-list__item"><span>LONG SLEEVE</span></li>
+							<li class="product-list__item"><span>HOODIE</span></li>
+							<li class="product-list__item"><span>SHIRTS &amp; BLOUSES</span></li>
+							<li class="product-list__item"><span>SWEATSHIRT</span></li>
+							<li class="product-list__item"><span class="product-list__nowrap">T-SHIRT</span></li>
+							<li class="product-list__item"><span>ALL</span></li>
 						</ul>
 					</div>
 					<div class="menu">
@@ -70,7 +70,7 @@
 													<a href="#" class="button__item">DETAIL</a>
 												</div>
 											</div>
-											<div class="menu__layer">
+											<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
@@ -170,7 +170,7 @@
 													<a href="#" class="button__item">DETAIL</a>
 												</div>
 											</div>
-											<div class="menu__layer">
+											<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
@@ -245,7 +245,7 @@
 													<a href="#" class="button__item">DETAIL</a>
 												</div>
 											</div>
-											<div class="menu__layer">
+											<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
@@ -320,7 +320,7 @@
 													<a href="#" class="button__item">DETAIL</a>
 												</div>
 											</div>
-											<div class="menu__layer">
+											<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
@@ -395,7 +395,7 @@
 													<a href="#" class="button__item">DETAIL</a>
 												</div>
 											</div>
-											<div class="menu__layer">
+											<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 												<div class="menu__option">
 													<div class="menu__sizes">
 														<div>
