--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -57,7 +57,7 @@
 														<a href="#" class="button__item">DETAIL</a>
 													</div>
 												</div>
-												<div class="menu__layer">
+												<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 													<div class="menu__option">
 														<div class="menu__sizes">
 															<div>
@@ -157,7 +157,7 @@
 														<a href="#" class="button__item">DETAIL</a>
 													</div>
 												</div>
-												<div class="menu__layer">
+												<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 													<div class="menu__option">
 														<div class="menu__sizes">
 															<div>
@@ -232,7 +232,7 @@
 														<a href="#" class="button__item">DETAIL</a>
 													</div>
 												</div>
-												<div class="menu__layer">
+												<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 													<div class="menu__option">
 														<div class="menu__sizes">
 															<div>
@@ -307,7 +307,7 @@
 														<a href="#" class="button__item">DETAIL</a>
 													</div>
 												</div>
-												<div class="menu__layer">
+												<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 													<div class="menu__option">
 														<div class="menu__sizes">
 															<div>
@@ -382,7 +382,7 @@
 														<a href="#" class="button__item">DETAIL</a>
 													</div>
 												</div>
-												<div class="menu__layer">
+												<div class="menu__layer" style="background-image: linear-gradient(green, green);">
 													<div class="menu__option">
 														<div class="menu__sizes">
 															<div>
