--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -612,7 +612,7 @@
 												<span class="menu__color"></span>
 												<span class="menu__color"></span>
 											</div>
-											<div class="menu__img"><img src="../assets/images/temp/@product01.png" alt="상품"></div>
+											<div class="menu__img"><img src="../assets/images/product.png" alt="상품"></div>
 										</a>
 									</div>
 								</div>
@@ -703,7 +703,7 @@
 				<div class="layer__close"><a href="#none" data-layer="Product_ReviewWrite" class="btn__close modal__hide"><span class="a11y">닫기</span></a></div>
 				<div class="layer__content">
 					<div class="rv__product">
-						<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+						<p class="rv__figure"><img src="../assets/images/product.png"></p>
 						<div class="rv__box">
 							<p class="rv__prname">Rinen Striped Jacket</p>
 							<div class="rv__prcnt">
@@ -732,23 +732,23 @@
 						<!-- 사진 추가 후 //-->
 						<ul class="rv_photo_list" style="display: none;">
 							<li>
-								<img class="figure" title="" src="../assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/product.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="../assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/product.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="../assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/product.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<li>
-								<img class="figure" title="" src="../assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/product.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li>
 							<!-- <li>
-								<img class="figure" title="" src="../assets/images/temp/@product01.png">
+								<img class="figure" title="" src="../assets/images/product.png">
 								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
 							</li> -->
 							<li>
@@ -824,7 +824,7 @@
 				<div class="layer__content">
 					<div class="cont_detail">
 						<div class="rv__product">
-							<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+							<p class="rv__figure"><img src="../assets/images/product.png"></p>
 							<div class="rv__box">
 								<div class="rv__head">
 									<p class="review__writter"><span>ININ******</span> 님의 리뷰</p>
